fix(Mobile): Bump bottom padding on mobile navbar

--- a/assets/styles/vars/global.less
+++ b/assets/styles/vars/global.less
@@ -11,7 +11,7 @@
 @icon-size: 14pt;
 @small-icon-size: 12pt;
 @larger-icon-size: 16pt;
-@mobile-nav-size: 3.5rem;
+@mobile-nav-size: 4.5rem;
 
 html,
 body {
